--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Auto Load Local Page</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <link rel="stylesheet" href="styles.css"> </head>
 <body>
 
   <div class="loader" id="loader"></div>
+  
   <iframe id="myFrame"></iframe>
 
-  <script src="script.js"></script>
-
-</body>
+  <script src="script.js"></script> </body>
 </html>
